--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,12 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: recursive
+    - name: ccache
+      uses: actions/cache@v2
+      with:
+        path: ~/.ccache
+        key:          ccache-${{ runner.os }}-build-${{ github.sha }}
+        restore-keys: ccache-${{ runner.os }}-build-
     - name: set apt conf
       run: ${{env.APT_SET_CONF}}
     - name: install dependencies
