--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,8 @@ jobs:
       run: ${{env.APT_INSTALL_LINUX}}
     - name: build
       run: ./ci.sh 1
+    - name: report release-v0.16
+      run: cat out/v0.16.0.3-log.txt      
     - name: report release-v0.17
       run: cat out/release-v0.17-log.txt
     - name: report release-v0.18
