--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,12 +24,20 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: recursive
+    - name: ccache
+      uses: actions/cache@v2
+      with:
+        path: ~/.ccache
+        key:          ccache-${{ runner.os }}-build-${{ github.sha }}
+        restore-keys: ccache-${{ runner.os }}-build-
     - name: set apt conf
       run: ${{env.APT_SET_CONF}}
     - name: install dependencies
       run: ${{env.APT_INSTALL_LINUX}}
     - name: build
-      run: ./ci.sh
+      run: ./ci.sh 1
+    - name: report release-v0.16
+      run: cat out/v0.16.0.3-log.txt      
     - name: report release-v0.17
       run: cat out/release-v0.17-log.txt
     - name: report release-v0.18
